--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<app-nav-bar></app-nav-bar>
-<router-outlet></router-outlet>
+<app-nav-bar (emitter)="triggerDrawer()"></app-nav-bar>
+<app-sidenav [opened]="opened"></app-sidenav>
