--- a/src/app/pages/sidenav/sidenav.component.html
+++ b/src/app/pages/sidenav/sidenav.component.html
@@ -1,6 +1,7 @@
 <mat-drawer-container class="example-container" autosize>
-    <mat-drawer #drawer class="example-sidenav" mode="side" opened>
+    <mat-drawer #drawer class="example-sidenav" mode="side" [opened]="loggedIn">
       <p>Auto-resizing sidenav</p>
+      <button (click)="logout()">Logout</button>
     </mat-drawer>
     <div class="example-sidenav-content">
       <router-outlet></router-outlet>
