--- a/src/app/pages/sidenav/sidenav.component.css
+++ b/src/app/pages/sidenav/sidenav.component.css
@@ -4,10 +4,10 @@
 }
   
 .example-sidenav-content {
-    padding: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
+    height: 80%;
 }
   
 .example-sidenav {
