--- a/src/app/pages/nav-bar/nav-bar.component.html
+++ b/src/app/pages/nav-bar/nav-bar.component.html
@@ -2,5 +2,5 @@
     <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon" (click)="drawerToggle()">
       <mat-icon>menu</mat-icon>
     </button>
-    <span>Template</span>
+    <span>Requerimientos</span>
 </mat-toolbar>
