--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,6 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.mat-form-field{ margin-right: 5px; }
+.mat-toolbar{ height: 80px; }
+.mat-toolbar-row{ height: 84px; }
