--- a/src/app/pages/requeriments/requeriments.component.css
+++ b/src/app/pages/requeriments/requeriments.component.css
@@ -1,11 +1,29 @@
-table {
-  width: 100%;
-}
 .card{
-  width: 100%;
+  width: 95%;
+  font-size: 10px;
+  margin: auto;
 }
 :host{
   display: block;
-  width: 80%;
+  width: 100%;
   height: 100%;
+}
+
+td{
+  font-size: 12px;
+}
+
+table {
+  width: 200%;
+}
+
+.example-container {
+  height: 100%;
+  width: 100%;
+  max-width: 100%;
+  overflow: auto;
+}
+
+.mat-table-sticky {
+  border-right: 1px solid #e0e0e0;
 }
