--- a/src/app/pages/requeriments/requeriments.component.html
+++ b/src/app/pages/requeriments/requeriments.component.html
@@ -9,51 +9,63 @@
     </mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
-    <table mat-table [dataSource]="data" class="mat-elevation-z8">
+    <div class="example-container mat-elevation-z8">
+      <table mat-table [dataSource]="data"  multiTemplateDataRows>
+  
+        <ng-container matColumnDef="date">
+          <th mat-header-cell *matHeaderCellDef> Fecha creación </th>
+          <td mat-cell *matCellDef="let element"> {{element.created_at.fecha | date : 'medium'}} </td>
+        </ng-container>
+  
+        <ng-container matColumnDef="name" sticky>
+          <th mat-header-cell *matHeaderCellDef> Nombres </th>
+          <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        </ng-container>
+  
+        <ng-container matColumnDef="email">
+          <th mat-header-cell *matHeaderCellDef> Email </th>
+          <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+        </ng-container>
+  
+        <ng-container matColumnDef="phone">
+          <th mat-header-cell *matHeaderCellDef> Teléfono </th>
+          <td mat-cell *matCellDef="let element"> {{element.phone}} </td>
+        </ng-container>
+      
+        <ng-container matColumnDef="address">
+          <th mat-header-cell *matHeaderCellDef> Dirección </th>
+          <td mat-cell *matCellDef="let element"> {{element.address}} </td>
+        </ng-container>
+      
+        <ng-container matColumnDef="typeRequeriment">
+          <th mat-header-cell *matHeaderCellDef> Tipo de requerimiento </th>
+          <td mat-cell *matCellDef="let element"> {{element.typeRequeriment.name}} </td>
+        </ng-container>
+  
+        <ng-container matColumnDef="product">
+          <th mat-header-cell *matHeaderCellDef> Producto </th>
+          <td mat-cell *matCellDef="let element"> {{element.product.name}} </td>
+        </ng-container>
+  
+        <ng-container matColumnDef="description">
+          <th mat-header-cell *matHeaderCellDef> Descripcion </th>
+          <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+        </ng-container>
+  
+        <ng-container matColumnDef="canal">
+          <th mat-header-cell *matHeaderCellDef> Canal </th>
+          <td mat-cell *matCellDef="let element"> {{element.canal.name}} </td>
+        </ng-container>
 
-      <ng-container matColumnDef="date">
-        <th mat-header-cell *matHeaderCellDef> Fecha creación </th>
-        <td mat-cell *matCellDef="let element"> {{element.created_at.fecha | date : 'medium'}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Nombres </th>
-        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="email">
-        <th mat-header-cell *matHeaderCellDef> Email </th>
-        <td mat-cell *matCellDef="let element"> {{element.email}} </td>
-      </ng-container>
-    
-      <ng-container matColumnDef="address">
-        <th mat-header-cell *matHeaderCellDef> Dirección </th>
-        <td mat-cell *matCellDef="let element"> {{element.address}} </td>
-      </ng-container>
-    
-      <ng-container matColumnDef="typeRequeriment">
-        <th mat-header-cell *matHeaderCellDef> Tipo de requerimiento </th>
-        <td mat-cell *matCellDef="let element"> {{element.typeRequeriment.name}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="product">
-        <th mat-header-cell *matHeaderCellDef> Producto </th>
-        <td mat-cell *matCellDef="let element"> {{element.product.name}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="description">
-        <th mat-header-cell *matHeaderCellDef> Descripcion </th>
-        <td mat-cell *matCellDef="let element"> {{element.description}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="canal">
-        <th mat-header-cell *matHeaderCellDef> Canal </th>
-        <td mat-cell *matCellDef="let element"> {{element.canal.name}} </td>
-      </ng-container>
-    
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-
-    </table>
+        <ng-container matColumnDef="user">
+          <th mat-header-cell *matHeaderCellDef> Usuario </th>
+          <td mat-cell *matCellDef="let element"> {{ element.user ? user.name : 'NA' }} </td>
+        </ng-container>
+      
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  
+      </table>
+    </div>
   </mat-card-content>
 </mat-card>
